--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -4,6 +4,8 @@
     margin: 0;      
     padding: 0;    
     list-style: none;
+    cursor: zoom-in;
+    transition: 1s ease-in-out ;
 }
 
 .normal {
@@ -70,6 +72,11 @@
     
 }
 
+.pokemon:hover{
+    transform: translateY(-2px);
+    box-shadow: .625rem .825rem .625rem 0 rgb(100, 98, 98);
+}
+
 .pokemon .number {
     color: #000;
     opacity: .3;
@@ -133,6 +140,123 @@
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
+}
+
+
+#popup{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #222224;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+#closeBtn{
+    
+    padding: .55rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    cursor: pointer;
+}
+
+#closeBtn:hover{
+    transform: translateY(-2px);
+    box-shadow: 1px 2px 1px 0 rgb(138, 135, 135);
+}
+
+#detailPokemon{
+    border-radius: 8px;
+}
+
+#img-pokemon{
+    margin-left:80px;
+    width: 150px; 
+}
+
+#data{
+   
+    background-color: white;
+    height: 19rem;
+    width: 22rem;
+    border-radius:30px 30px 8px 8px;
+    box-shadow: 0 -15px 24px -8px #5c5b59;
+   
+}
+
+#data h4{
+    text-align: center;
+}
+
+#stats{
+  
+    display: flex;
+    font-size: 0.8rem;
+    width: 80%;
+}
+
+.stat-bar{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: 0 0 0 60px;
+
+}
+
+.stat-bar p{
+    
+    border-radius: 5px;
+    padding: 0.6rem;
+    box-shadow: 2px 1px 5px 1px #5c5b59;
+}
+
+#hability{
+    display: flex;
+    width: 100%;
+    font-size: 0.8rem;
+    margin: 0 0 0 80px;
+    
+    
+}
+
+.stat-desc{
+    color: rgb(24, 26, 24);
+    font-weight: bold;
+    text-align: right;
+    border-right: 1px solid black;
+    padding-right: 0.6rem;
+    text-transform: uppercase;
+    
+    
+    
+}
+
+.stat-desc p{
+      border-radius: 5px;
+ 
+}
+
+.bar-inner{
+    
+    border-radius: 4px;
+    padding-left: 0.6rem;
+    
+}
+
+.bar-inner p{
+     
+    padding-left: 1rem;
+    border-radius: 5px;
+    
 }
 
 
